# Retail-Agentic-Commerce

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE-3rd-party.txt  LICENSE-assets.txt  README.md  docker-compose-nim.yml  docker-compose.infra.yml  docker-compose.yml  env.example  pyproject.toml  sonar-project.properties
.cursor/skills/features/: SKILL.md
.cursor/skills/ui/: SKILL.md
.cursor/skills/validation/: SKILL.md
.github/workflows/: ci.yml  sonarqube.yml
deploy/: 1_Deploy_Agentic_Commerce.ipynb
docs/: PRD.md  acp-spec.md  agent-playbook.md  architecture.md  features.md  project-brief.md  stack.md  validation.md
docs/features/: feature-14-enhanced-checkout.md  feature-16-apps-sdk.md  feature-17-ucp-integration.md  feature-17-widget-autonomy.md  index.md
docs/specs/: acp-spec.md  apps-sdk-spec.md  ucp-spec.md
reference-docs/: README.md  architecture-decision-records.md  c4-togaf-diagrams.md  functional-documentation.md  high-level-design.md  low-level-design.md  technical-documentation.md
src/: __init__.py
src/agents/: Dockerfile  README.md  pyproject.toml
src/agents/configs/: post-purchase.yml  promotion.yml  recommendation.yml  search.yml
src/agents/scripts/: seed_milvus.py
src/apps_sdk/: Dockerfile  README.md  __init__.py  config.py  events.py  main.py  recommendation_helpers.py  rest_endpoints.py  schemas.py  widget_endpoints.py
src/apps_sdk/tools/: __init__.py  acp_sessions.py  cart.py  checkout.py  recommendations.py
src/apps_sdk/web/: package.json  pnpm-lock.yaml
src/data/: __init__.py  product_catalog.py
src/merchant/: Dockerfile  __init__.py  config.py  main.py
src/merchant/agents/: __init__.py
src/merchant/api/: __init__.py  dependencies.py  metrics_schemas.py  schemas.py  ucp_schemas.py
src/merchant/db/: __init__.py  database.py  models.py
src/merchant/domain/: __init__.py
src/merchant/middleware/: __init__.py  headers.py  logging.py
src/merchant/protocols/: __init__.py
src/merchant/services/: __init__.py  a2a.py  agent_outcomes.py  checkout.py  helpers.py  idempotency.py  metrics.py  post_purchase.py  post_purchase_webhook.py  promotion.py  recommendation_attribution.py  ucp.py  webhook.py
src/payment/: Dockerfile  __init__.py  config.py  main.py
src/payment/api/: __init__.py  dependencies.py  schemas.py
src/ui/: .prettierignore  Dockerfile  env.example  eslint.config.mjs  kui.d.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
tests/: __init__.py  conftest.py
tests/agents/: test_recommendation_workflow_contract.py
tests/apps_sdk/: __init__.py  conftest.py  test_acp_sessions.py  test_api.py  test_events.py  test_metrics_outcomes.py  test_recommendations.py  test_tools.py
tests/merchant/: __init__.py
tests/payment/: __init__.py  conftest.py
(+164 files in other folders)
