[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[project]
name = "acp-agents"
version = "0.1.0"
description = "NAT Agents for Agentic Commerce Protocol - Promotion and Post-Purchase agents"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # NAT with ingestion (Milvus retriever) and langchain extras
    "nvidia-nat[ingestion,langchain,phoenix]==1.4.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportGeneralTypeIssues = "warning"
reportCallIssue = "warning"

[tool.uv] 
managed = true
